# Blender-ID

./: .gitignore  AUTH_SCOPES.md  Pipfile  README.md  ___deploy.sh___  gulpfile.js  package-lock.json  package.json  pyproject.toml  recreate_venv.sh  requirements-dev.txt  requirements.txt  setup.cfg
bid_addon_support/: tests.py  urls.py  views.py
bid_addon_support/fixtures/: bid_addon_support.json
bid_api/: __init__.py  admin.py  apps.py  http_responses.py  models.py  signals.py  urls.py
bid_api/fixtures/: blender_cloud_dev_webhook.json  blender_store_dev_webhook.json
bid_api/migrations/: 0001_initial.py  0002_webhook_secret_default.py  0003_webhook_timeout.py  0004_webhookqueuedcall.py  0005_webhook_last_flush_attempt.py  0006_webhookqueuedcall_defaults.py
bid_api/tests/: abstract.py  test_authenticate.py  test_badger.py  test_create_user.py  test_info.py  test_webhooks.py
bid_api/views/: abstract.py  authenticate.py  badger.py  create_user.py  info.py
bid_main/: admin.py  apps.py  devserver_support.py  email.py  fields.py  forms.py  hashers.py  models.py  oauth2_views.py  signals.py  urls.py  views.py
bid_main/fixtures/: blender_cloud_devserver.json  cloud_roles.json  default_roles.json  default_site.json  flatpages.json
bid_main/migrations/: 0009_oauth2_models.py  0011_oauth2app_notes.py  0012_user_public_roles_as_string.py  (+18 more)
blenderid/: __settings.py  common_settings.py  oauth2_urls.py  urls.py
docker/: 2server.sh  Dockerfile  Dockerfile.base  README.md  aliases  ash_history  build_docker_img.sh  deploy.sh  deploytime-settings-blenderid.py  docker-compose.yml  prep_docker_img.sh  settings.sh
docs/: mkdocs.yml
integration_tests/: README.md  setup.cfg  test_addon_behaviour.py  test_oauth_flow.py
(+76 files in other folders)
