[tool.poetry]
name = "blender-id"
version = "0.1.0"
description = "Blender's user identity service employing OAuth2."
authors = ["Sybren A. Stüvel <sybren@blender.studio>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = {version = "*", extras = ["bcrypt"]}
django-braces = "*"
django-debug-toolbar = "*"
django-oauth-toolkit = "*"
"django-gravatar2" = "*"
django-loginas = "*"
mysqlclient = "*"
python-dateutil = "*"
pytz = "*"
raven = "*"
bcrypt = "*"
requests = "*"
Markdown = "*"
Pillow = "*"
docutils = "*"
sorl-thumbnail = "*"
"django-admin-select2" = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
responses = "*"
ipython = "*"
mkdocs-material = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
