[tool.poetry]
name = "blender-id"
version = "0.1.0"
description = "Blender's user identity service employing OAuth2."
authors = ["Sybren A. Stüvel <sybren@blender.studio>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = {version = "~2.2", extras = ["bcrypt"]}
django-braces = "~1.13"
django-debug-toolbar = "~1.11"
django-oauth-toolkit = "~1.2"
"django-gravatar2" = "~1.4"
django-loginas = "~0.3"
mysqlclient = "~1"
python-dateutil = "~2.8"
pytz = "^2019.0"
raven = "~6"
bcrypt = "~3"
requests = "~2"
Markdown = "~3"
Pillow = "~6"
docutils = "~0.14"
sorl-thumbnail = "~12"
"django-admin-select2" = "~1.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
responses = "*"
ipython = "*"
mkdocs-material = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
